<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="active">Active</string>
    <string name="idle">Idle</string>
    <string name="charging">Charging</string>
    <string name="not_charging">Not charging</string>
    <string name="network_type">Network Type:</string>
    <string name="device_state">Device State:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">WiFi</string>
    <string name="override_deadline">Override Deadline:&#160;</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_service">Job Service</string>
    <string name="your_job_is_running">Your job is running!</string>
    <string name="not_set">Not set</string>
    <string name="active_or_idle">Active or Idle</string>
    <string name="charging_or_not_charging">Charging or Not Charging</string>
</resources>